<resources>
    <string name="app_name">GamesCatalogue: </string>
    <string name="game_poster">Game Poster</string>
    <string name="top_rated">Popular </string>
    <string name="release_soon">Release Soon</string>
    <string name="rating">Metacritic Score: </string>
    <string name="release_date">Release Date:</string>
    <string name="game_title">Game Title:</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="description">Description:</string>
    <string name="user_comments">User Reviews:</string>
    <string name="no_comments">No Reviews</string>
    <string name="n_a">N/A</string>
    <string name="loading">Loading...</string>
</resources>
