<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:textColor="@color/white_color"
        android:text="@string/game_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintBottom_toTopOf="@id/textViewLabelRating"/>


    <TextView
        android:id="@+id/textViewLabelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:textColor="@color/white_color"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:text="@string/n_a"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewLabelReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:textColor="@color/white_color"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:text="@string/n_a"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewLabelDescription"
        android:layout_width="0dp"
        android:text="@string/description"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@color/white_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewDecription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingStart="5dp"
        android:text="@string/n_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelDescription"
        android:textSize="18sp"
        android:textColor="@color/white_color" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDecription"
        app:layout_constraintBottom_toTopOf="@id/textViewLabelComments"/>

    <TextView
        android:id="@+id/textViewLabelComments"
        android:textColor="@color/white_color"
        android:textSize="18sp"
        android:text="@string/user_comments"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDecription"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewReviews"
        android:nestedScrollingEnabled="false"
        android:layout_width="0dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelComments" />

</androidx.constraintlayout.widget.ConstraintLayout>